cwidget (0.5.17-5) UNRELEASED; urgency=medium

  [ Manuel A. Fernandez Montecelo ]
  * d/rules: do not hardcode '-std=c++11', there are new standards now and
    we don't need to keep in sync this library and aptitude
  * d/compat: level 10
    - d/control: Setting Build-Depends accordingly
    - d/rules: not passing --parallel and --with autoreconf, they are the
      default now

  [ Helmut Grohne ]
  * Drop versioned g++ dependency, because the libstdc++6 transition is
    complete and the dependency breaks cross compilation.
    (Closes: #862200)

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Tue, 09 May 2017 19:51:07 +0200

cwidget (0.5.17-4) unstable; urgency=medium

  * Acknowledge NMU.
  * Fix failure with autopkgtest when using g++ 5 (Closes: #795177).
    Thanks Martin Pitt.

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Thu, 13 Aug 2015 14:13:04 +0100

cwidget (0.5.17-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Rename libcwidget3 to libcwidget3v5, libcwidget3 to libcwidget3v5,
    follow-up for the libstdc++6 ABI transition. Addresses: #794594.
  * Add Conflicts/Replaces for the old packages.

 -- Matthias Klose <doko@debian.org>  Tue, 04 Aug 2015 20:46:19 +0200

cwidget (0.5.17-3) unstable; urgency=low

  * Changes to build with GCC-5 and in C++11 mode (Closes: #792681).
    Thanks Matthias Klose.  Prompted by:
    - transition to GCC-5 as default compiler in Debian unstable;
    - failure to compile cwidget without -std=c++11 with
      this new version;
    - there is a change in the ABI of libstdc++ w.r.t. GCC < 5, in
      std::string, std::list and other parts (sigc++-2.0 is a dependency of
      cwidget and uses std::list in the API)
  * Quell lintian warning xs-testsuite-header-in-debian-control by
    removing XS- prefix in debian/control
  * Revamp options passed to the compiler, among others some obsolete
    compiler flags that tried to address a problem with old versions of