@@ -7,6 +7,7 @@ cwidget (0.5.17-5) UNRELEASED; urgency=medium
     - d/control: Setting Build-Depends accordingly
     - d/rules: not passing --parallel and --with autoreconf, they are the
       default now
+  * Migrate to -dbgsym
 
   [ Helmut Grohne ]
   * Drop versioned g++ dependency, because the libstdc++6 transition is
